deploying-simple-hello-express-app/hello-express-deployment-and-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-express
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: hello-express
      app.kubernetes.io/version: 1.0.0
  replicas: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hello-express
        app.kubernetes.io/version: 1.0.0
    spec:
      containers:
        - name: hello-express
          image: jxlwqq/hello-express:1.0.0
          ports:
            - containerPort: 3000
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: hello-express-svc
  labels:
    app.kubernetes.io/name: hello-express
spec:
  selector:
    app.kubernetes.io/name: hello-express
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
