deploying-simple-hello-express-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-express-ingress
  labels:
    app.kubernetes.io/name: hello-express
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-express-svc
                port:
                  number: 3000
  ingressClassName: nginx
